--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "node-and-express-tutorial",
+  "name": "tutorial",
   "version": "1.0.0",
   "description": "",
-  "license": "ISC",
-  "author": "",
-  "type": "commonjs",
-  "main": "app.js",
+  "main": "1-intro.js",
   "scripts": {
     "start": "nodemon app.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.20"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11"
+    "nodemon": "^2.0.7"
   }
 }
